// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component renders horizontal divider 1`] = `
@media  {
  .c-ewHqZc {
    background: var(--colors-tonal200);
  }

  .c-ewHqZc[data-orientation=horizontal] {
    height: 1px;
    width: 100%;
  }

  .c-ewHqZc[data-orientation=vertical] {
    height: 100%;
    width: 1px;
  }
}

<div>
  <div
    aria-orientation="horizontal"
    class="c-ewHqZc"
    data-orientation="horizontal"
  />
</div>
`;

exports[`Divider component renders vertical divider 1`] = `
@media  {
  .c-ewHqZc {
    background: var(--colors-tonal200);
  }

  .c-ewHqZc[data-orientation=horizontal] {
    height: 1px;
    width: 100%;
  }

  .c-ewHqZc[data-orientation=vertical] {
    height: 100%;
    width: 1px;
  }
}

<div>
  <div
    aria-orientation="vertical"
    class="c-ewHqZc"
    data-orientation="vertical"
  />
</div>
`;
